// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectDefaultTypeHandler API createElement should create an element with child elements representing the members as input elements 1`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API createElement should create an element with deeply nested child elements representing the members as input elements 1`] = `

<div name="person"
     data-setting-container
     class
>
  <div name="name"
       data-setting-container
       class
       data-setting-fully-qualified-name="name"
       data-setting-type="object:default"
       data-setting-name="name"
  >
    <input name="first"
           type="text"
           value="firstname"
           data-setting-fully-qualified-name="name.first"
           data-setting-type="string:text"
           data-setting-name="first"
    >
    <input name="last"
           type="text"
           value="lastname"
           data-setting-fully-qualified-name="name.last"
           data-setting-type="string:text"
           data-setting-name="last"
    >
    <div name="optional"
         data-setting-container
         class
         data-setting-fully-qualified-name="name.optional"
         data-setting-type="object:default"
         data-setting-name="optional"
    >
      <input name="middle"
             type="text"
             value="middlename"
             data-setting-fully-qualified-name="name.optional.middle"
             data-setting-type="string:text"
             data-setting-name="middle"
      >
    </div>
  </div>
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should add a child element value when the setting does not exist in the DOM and the setting is in the value object 1`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should add a child element value when the setting does not exist in the DOM and the setting is in the value object 2`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
  <input name="eyeColor"
         type="text"
         value="brown"
         data-setting-fully-qualified-name="eyeColor"
         data-setting-type="string:text"
         data-setting-name="eyeColor"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should add a child element value when the setting does not exist in the DOM and the setting is in the value object during an update 1`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should add a child element value when the setting does not exist in the DOM and the setting is in the value object during an update 2`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
  <div name="height"
       data-setting-container
       class
       data-setting-fully-qualified-name="height"
       data-setting-type="object:default"
       data-setting-name="height"
  >
    <input name="feet"
           type="number"
           value="5"
           data-setting-fully-qualified-name="height.feet"
           data-setting-type="number:number"
           data-setting-name="feet"
    >
    <input name="inches"
           type="number"
           value="10"
           data-setting-fully-qualified-name="height.inches"
           data-setting-type="number:number"
           data-setting-name="inches"
    >
  </div>
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should remove a child element from the DOM when the value no longer exists 1`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should remove a child element from the DOM when the value no longer exists 2`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should set the value for a self-created simple element 1`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should set the value for a self-created simple element 2`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should update a child element value when the value exists in the DOM and in the value object 1`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;

exports[`ObjectDefaultTypeHandler API setValue should update a child element value when the value exists in the DOM and in the value object 2`] = `

<div name="person"
     data-setting-container
     class
>
  <input name="name"
         type="text"
         value="person name"
         data-setting-fully-qualified-name="name"
         data-setting-type="string:text"
         data-setting-name="name"
  >
  <input name="age"
         type="number"
         value="21"
         data-setting-fully-qualified-name="age"
         data-setting-type="number:number"
         data-setting-name="age"
  >
  <input type="checkbox"
         name="registeredVoter"
         value="true"
         data-setting-fully-qualified-name="registeredVoter"
         data-setting-type="boolean:checkbox"
         data-setting-name="registeredVoter"
  >
</div>

`;
